[tool.poetry]
name = "NYC-Taxi-Restaurants"
version = "0.1.0"
description = "NYC Taxi Restaurants"
authors = ["Manny <manny881@zoho.com>"]
readme = "README.md"
packages = [{include = ""}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
geopandas = "^0.12.2"
geopy = "^2.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
bandit = "^1.7.4"
icecream = "^2.1.3"
pandoc = "^2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
